# app/main/api/register_resource.py
@@ -16,7 +16,10 @@ class RegisterResource(Resource):
             validation.validate_email(user_request.email)
             validate_user_does_not_exist(user_request.email)
             user = dao.create(user_request)
-            return {'id': user.id, 'token': auth_utils.generate_auth_token(user.id).decode()}, 200
+            return {'id': user.id,
+                    'first_name': user.first_name,
+                    'email': user.email,
+                    'token': auth_utils.generate_auth_token(user.id).decode()}, 200
 
         except errors.ApiError as ae:
             return errors.build_response_from_api_error(ae)
